--- a/XenScheduler/Views/CalendarPage.xaml
+++ b/XenScheduler/Views/CalendarPage.xaml
@@ -5,6 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:System="clr-namespace:System;assembly=System.Runtime"
     xmlns:ViewModels="clr-namespace:XenScheduler.ViewModels"
+    xmlns:converters="clr-namespace:XenScheduler.Converters"
     xmlns:mct="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
     xmlns:xc="clr-namespace:XCalendar.Maui.Views;assembly=XCalendar.Maui"
     xmlns:xcConverters="clr-namespace:XCalendar.Maui.Converters;assembly=XCalendar.Maui"
@@ -23,78 +24,86 @@
         </mct:MultiConverter>
         <mct:VariableMultiValueConverter x:Key="AllTrueConverter" ConditionType="All" />
         <mct:VariableMultiValueConverter x:Key="AnyTrueConverter" ConditionType="Any" />
+        <converters:DayNameConverter x:Key="DayNameConverter" />
+        <converters:MonthNameConverter x:Key="MonthNameConverter" />
     </ContentPage.Resources>
 
     <ScrollView Orientation="Vertical" VerticalScrollBarVisibility="Never">
         <VerticalStackLayout Spacing="0">
             <xc:CalendarView
                 x:Name="FancyCalendarView"
-                BackgroundColor="{Binding CalendarBackgroundColor}"
+                BackgroundColor="White"
                 BackwardsArrowCommand="{Binding NavigateCalendarCommand}"
                 BackwardsArrowCommandParameter="{Binding BackwardsNavigationAmount}"
-                DayNamesHeightRequest="{Binding DayNamesHeightRequest}"
+                DayNamesHeightRequest="25"
                 Days="{Binding Calendar.Days}"
                 DaysOfWeek="{Binding Calendar.DayNamesOrder}"
-                DaysViewHeightRequest="{Binding DaysViewHeightRequest}"
+                DaysViewHeightRequest="300"
                 ForwardsArrowCommand="{Binding NavigateCalendarCommand}"
                 ForwardsArrowCommandParameter="{Binding ForwardsNavigationAmount}"
-                IsVisible="{Binding CalendarIsVisible}"
-                NavigatedDate="{Binding Calendar.NavigatedDate}"
-                Style="{StaticResource DefaultCalendarViewStyle}">
+                IsVisible="True"
+                NavigatedDate="{Binding Calendar.NavigatedDate}">
 
                 <xc:CalendarView.NavigationViewTemplate>
                     <ControlTemplate>
                         <xc:NavigationView
-                            ArrowBackgroundColor="{Binding NavigationArrowBackgroundColor}"
-                            ArrowColor="{Binding NavigationArrowColor}"
-                            BackgroundColor="{Binding NavigationBackgroundColor}"
+                            ArrowBackgroundColor="#5B61B9"
+                            ArrowColor="White"
+                            BackgroundColor="#5B61B9"
                             BackwardsArrowCommand="{Binding BackwardsArrowCommand, Source={x:RelativeSource TemplatedParent}}"
                             BackwardsArrowCommandParameter="{Binding BackwardsArrowCommandParameter, Source={RelativeSource TemplatedParent}}"
                             BindingContext="{Binding BindingContext, Source={RelativeSource TemplatedParent}}"
                             ForwardsArrowCommand="{Binding ForwardsArrowCommand, Source={x:RelativeSource TemplatedParent}}"
                             ForwardsArrowCommandParameter="{Binding ForwardsArrowCommandParameter, Source={RelativeSource TemplatedParent}}"
-                            HeightRequest="{Binding NavigationHeightRequest}"
-                            Style="{StaticResource DefaultNavigationViewStyle}"
-                            Text="{Binding Text, Source={RelativeSource TemplatedParent}}"
-                            TextColor="{Binding NavigationTextColor}" />
+                            HeightRequest="50"
+                            Text="{Binding Text, Converter={StaticResource MonthNameConverter}, Source={RelativeSource TemplatedParent}}"
+                            TextColor="White" />
                     </ControlTemplate>
                 </xc:CalendarView.NavigationViewTemplate>
+
+                <xc:CalendarView.DayNameTemplate>
+                    <DataTemplate x:DataType="{x:Type System:DayOfWeek}">
+                        <Label
+                            HorizontalTextAlignment="Center"
+                            Text="{Binding ., Converter={StaticResource DayNameConverter}}"
+                            VerticalTextAlignment="Center" />
+                    </DataTemplate>
+                </xc:CalendarView.DayNameTemplate>
 
                 <xc:CalendarView.DayTemplate>
                     <DataTemplate x:DataType="{x:Type xcModels:CalendarDay}">
                         <Border
                             Margin="2.5"
                             BackgroundColor="Transparent"
-                            HeightRequest="{Binding BindingContext.DayHeightRequest, Source={x:Reference This}}"
-                            WidthRequest="{Binding BindingContext.DayWidthRequest, Source={x:Reference This}}">
+                            HeightRequest="45"
+                            WidthRequest="45">
 
                             <Border.StrokeShape>
                                 <Ellipse />
                             </Border.StrokeShape>
 
                             <xc:DayView
-                                CurrentMonthBackgroundColor="{Binding BindingContext.DayCurrentMonthBackgroundColor, Source={x:Reference This}}"
+                                CurrentMonthBackgroundColor="White"
                                 CurrentMonthCommand="{Binding BindingContext.ChangeDateSelectionCommand, Source={x:Reference This}}"
                                 CurrentMonthCommandParameter="{Binding DateTime}"
-                                CurrentMonthTextColor="{Binding BindingContext.DayCurrentMonthTextColor, Source={x:Reference This}}"
+                                CurrentMonthTextColor="Black"
                                 DateTime="{Binding DateTime}"
-                                InvalidBackgroundColor="{Binding BindingContext.DayInvalidBackgroundColor, Source={x:Reference This}}"
-                                InvalidTextColor="{Binding BindingContext.DayInvalidTextColor, Source={x:Reference This}}"
+                                InvalidBackgroundColor="White"
+                                InvalidTextColor="LightGray"
                                 IsCurrentMonth="{Binding IsCurrentMonth}"
                                 IsInvalid="{Binding IsInvalid}"
                                 IsSelected="{Binding IsSelected}"
                                 IsToday="{Binding IsToday}"
-                                OtherMonthBackgroundColor="{Binding BindingContext.DayOtherMonthBackgroundColor, Source={x:Reference This}}"
-                                OtherMonthTextColor="{Binding BindingContext.DayOtherMonthTextColor, Source={x:Reference This}}"
-                                SelectedBackgroundColor="{Binding BindingContext.DaySelectedBackgroundColor, Source={x:Reference This}}"
+                                OtherMonthBackgroundColor="White"
+                                OtherMonthTextColor="#FFA0A0A0"
+                                SelectedBackgroundColor="#5B61B9"
                                 SelectedCommand="{Binding BindingContext.ChangeDateSelectionCommand, Source={x:Reference This}}"
                                 SelectedCommandParameter="{Binding DateTime}"
-                                SelectedTextColor="{Binding BindingContext.DaySelectedTextColor, Source={x:Reference This}}"
-                                Style="{StaticResource DefaultDayViewStyle}"
-                                TodayBackgroundColor="{Binding BindingContext.DayTodayBackgroundColor, Source={x:Reference This}}"
+                                SelectedTextColor="White"
+                                TodayBackgroundColor="White"
                                 TodayCommand="{Binding BindingContext.ChangeDateSelectionCommand, Source={x:Reference This}}"
                                 TodayCommandParameter="{Binding DateTime}"
-                                TodayTextColor="{Binding BindingContext.DayTodayTextColor, Source={x:Reference This}}" />
+                                TodayTextColor="#5B61B9" />
                         </Border>
                     </DataTemplate>
                 </xc:CalendarView.DayTemplate>
