--- a/XenScheduler/Views/CalendarPage.xaml
+++ b/XenScheduler/Views/CalendarPage.xaml
@@ -4,16 +4,17 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:System="clr-namespace:System;assembly=System.Runtime"
-    xmlns:ViewModels="clr-namespace:XenScheduler.ViewModels"
     xmlns:converters="clr-namespace:XenScheduler.Converters"
     xmlns:mct="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+    xmlns:models="clr-namespace:XenScheduler.Models"
+    xmlns:viewmodels="clr-namespace:XenScheduler.ViewModels"
     xmlns:xc="clr-namespace:XCalendar.Maui.Views;assembly=XCalendar.Maui"
     xmlns:xcConverters="clr-namespace:XCalendar.Maui.Converters;assembly=XCalendar.Maui"
     xmlns:xcInterfaces="clr-namespace:XCalendar.Core.Interfaces;assembly=XCalendar.Core"
     xmlns:xcModels="clr-namespace:XCalendar.Core.Models;assembly=XCalendar.Core"
     x:Name="This"
     Title="CalendarPage"
-    x:DataType="{x:Type ViewModels:CalendarViewModel}"
+    x:DataType="{x:Type viewmodels:CalendarViewModel}"
     Style="{StaticResource DefaultPageStyle}">
     <ContentPage.Resources>
         <mct:InvertedBoolConverter x:Key="InvertedBoolConverter" />
@@ -27,9 +28,8 @@
         <converters:DayNameConverter x:Key="DayNameConverter" />
         <converters:MonthNameConverter x:Key="MonthNameConverter" />
     </ContentPage.Resources>
-
     <ScrollView Orientation="Vertical" VerticalScrollBarVisibility="Never">
-        <VerticalStackLayout Spacing="0">
+        <StackLayout Spacing="0">
             <xc:CalendarView
                 x:Name="FancyCalendarView"
                 BackgroundColor="White"
@@ -107,10 +107,7 @@
                         </Border>
                     </DataTemplate>
                 </xc:CalendarView.DayTemplate>
-
             </xc:CalendarView>
-
-        </VerticalStackLayout>
+        </StackLayout>
     </ScrollView>
-
 </ContentPage>
